html css completed

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <section class="testimonials-section">
       <div class="container">
         <div class="left">
-          <div class="image-container">
+          <div class="image-container shadow">
             <img src="./images//healthy.png" alt="" />
           </div>
         </div>
@@ -297,14 +297,61 @@
               <span>freelancer</span>
             </div>
 
-            <!-- <div class="buttons-container">
+            <div class="buttons-slide-container">
               <i class="fa-solid fa-circle-chevron-left fa-3x"></i>
               <i class="fa-solid fa-circle-chevron-right fa-3x"></i>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="top">
+          <div class="left">
+            <h3>Eatly</h3>
+            <p>
+              we have a mission to <br />
+              make people around the<br />
+              world better through a healthier diet
+            </p>
+          </div>
+          <div class="right">
+            <ul>
+              <li><h2>About us</h2></li>
+              <li>About</li>
+              <li>Features</li>
+              <li>News & Blog</li>
+            </ul>
+            <ul>
+              <li><h2>Movement</h2></li>
+              <li>About</li>
+              <li>Features</li>
+              <li>News & Blog</li>
+            </ul>
+            <ul>
+              <li><h2>Company</h2></li>
+              <li>About</li>
+              <li>Features</li>
+              <li>News & Blog</li>
+            </ul>
+            <ul>
+              <li><h2>Support</h2></li>
+              <li>About</li>
+              <li>Features</li>
+              <li>News & Blog</li>
+            </ul>
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="bottom-left"><p>@2023 Eatly.All Right received</p></div>
+          <div class="bottom-right">
+            <p>Terms & Agreements</p>
+            <p>Privacy Policy</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
