--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
           <div class="buttons-container">
             <i
               class="fa-solid fa-circle-chevron-left fa-2x"
-              id="prev-button"
+              id="prevButton"
             ></i>
             <i
               class="fa-solid fa-circle-chevron-right fa-2x"
-              id="next-button"
+              id="nextButton"
             ></i>
           </div>
         </div>
@@ -236,8 +236,8 @@
             </p>
 
             <div class="buttons-container">
-              <i class="fa-solid fa-circle-chevron-left fa-3x"></i>
-              <i class="fa-solid fa-circle-chevron-right fa-3x"></i>
+              <i class="fa-solid fa-circle-chevron-left fa-3x" id="left"></i>
+              <i class="fa-solid fa-circle-chevron-right fa-3x" id="right"></i>
             </div>
           </div>
         </div>
@@ -274,14 +274,35 @@
                 <div class="image-container">
                   <img src="./images//food.png" alt="" />
                 </div>
-                <p>Red onion with copped cabbage</p>
+                <p>One onion with copped cabbage</p>
                 <button>Try Now</button>
               </div>
               <div class="card-image">
                 <div class="image-container">
                   <img src="./images//food.png" alt="" />
                 </div>
-                <p>Red onion with copped cabbage</p>
+                <p>Two onion with copped cabbage</p>
+                <button>Try Now</button>
+              </div>
+              <div class="card-image">
+                <div class="image-container">
+                  <img src="./images//food.png" alt="" />
+                </div>
+                <p>Three onion with copped cabbage</p>
+                <button>Try Now</button>
+              </div>
+              <div class="card-image">
+                <div class="image-container">
+                  <img src="./images//food.png" alt="" />
+                </div>
+                <p>Four onion with copped cabbage</p>
+                <button>Try Now</button>
+              </div>
+              <div class="card-image">
+                <div class="image-container">
+                  <img src="./images//food.png" alt="" />
+                </div>
+                <p>Five onion with copped cabbage</p>
                 <button>Try Now</button>
               </div>
             </div>
